Update projects link url

--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -6,12 +6,12 @@ block content
   h2 App
   ul
     li
-      a(href='watilde.github.io/dartstack/') Dartstack
+      a(href='http://watilde.github.io/dartstack/') Dartstack
   h2 npm
   ul
     li
-      a(href='github.com/watilde/tvm') tvm
+      a(href='http://watilde.github.io/tvm/') tvm
     li
-      a(href='github.com/watilde/grunt-tvm-tsc') grunt-tvm-tsc
+      a(href='http://watilde.github.io/grunt-tvm-tsc') grunt-tvm-tsc
     li
-      a(href='github.com/watilde/qrep') qrep
+      a(href='http://watilde.github.io/qrep') qrep
