--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -6,11 +6,11 @@ block content
   h2 App
   ul
     li
-      a(href='http://watilde.github.io/dartstack/') Dartstack
+      a(href='http://watilde.github.io/dartstack') Dartstack
   h2 npm
   ul
     li
-      a(href='http://watilde.github.io/tvm/') tvm
+      a(href='http://watilde.github.io/tvm') tvm
     li
       a(href='http://watilde.github.io/grunt-tvm-tsc') grunt-tvm-tsc
     li
