Add npm project

--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -10,8 +10,10 @@ block content
   h2 npm
   ul
     li
-      a(href='http://watilde.github.io/tvm') tvm
+      a(href='https://watilde.github.io/grunt-require-config') grunt-require-config
+    li
+      a(href='http://watilde.github.io/qrep') qrep
     li
       a(href='http://watilde.github.io/grunt-tvm-tsc') grunt-tvm-tsc
     li
-      a(href='http://watilde.github.io/qrep') qrep
+      a(href='http://watilde.github.io/tvm') tvm
