Add about me links

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -3,3 +3,11 @@ block head
   title About Me
 block content
   h1 About Me
+  h2 links
+  ul
+    li
+      a(href='http://jsdo.it/watilde/') jsdo.it
+    li
+      a(href='https://github.com/watilde/') GitHub
+    li
+      a(href='https://npmjs.org/~watilde') npm
