Update about me

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -3,11 +3,15 @@ block head
   title About Me
 block content
   h1 About Me
-  h2 links
+  h2 English
   ul
-    li
-      a(href='http://jsdo.it/watilde/') jsdo.it
     li
       a(href='https://github.com/watilde/') GitHub
     li
       a(href='https://npmjs.org/~watilde') npm
+  h2 Japanese
+  ul
+    li
+      a(href='http://qiita.com/watilde') Qiita
+    li
+      a(href='http://jsdo.it/watilde/') jsdo.it
