minor tweek to projects

--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -7,7 +7,7 @@ block content
   ul
     li
       a(href='http://watilde.github.io/dartstack') Dartstack
-  h2 npm
+  h2 Node Packaged Modules
   ul
     li
       a(href='https://watilde.github.io/grunt-require-config') grunt-require-config
