--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -7,8 +7,10 @@ block content
   ul
     li
       a(href='http://watilde.github.io/dartstack') Dartstack
-  h2 Node Packaged Modules
+  h2 npm
   ul
+    li
+      a(href='https://watilde.github.io/gistjs') gistjs
     li
       a(href='https://watilde.github.io/grunt-require-config') grunt-require-config
     li
