Posts make-gruntfile-js-10-rows.md

--- a/src/layouts/base.jade
+++ b/src/layouts/base.jade
@@ -21,7 +21,7 @@ html
   body
     nav
       h1.name
-        a(href="#{data.baseUrl}") watilde.blog
+        a(href="#{data.baseUrl}") Blog
       .menu.icon-menu
       ul.nav-links
         li.text-link
