--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -12,6 +12,8 @@ block content
   h2 Japanese
   ul
     li
+      a(href='https://twitter.com/watilde/') Twitter
+    li
       a(href='http://qiita.com/watilde') Qiita
     li
       a(href='http://jsdo.it/watilde/') jsdo.it
