--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -10,9 +10,9 @@ block content
   h2 npm
   ul
     li
-      a(href='https://watilde.github.io/gistjs') gistjs
+      a(href='http://watilde.github.io/gistjs') gistjs
     li
-      a(href='https://watilde.github.io/grunt-require-config') grunt-require-config
+      a(href='http://watilde.github.io/grunt-require-config') grunt-require-config
     li
       a(href='http://watilde.github.io/qrep') qrep
     li
