Add rpull npm on project

--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -10,6 +10,8 @@ block content
   h2 npm
   ul
     li
+      a(href='http://watilde.github.io/rpull') rpull
+    li
       a(href='http://watilde.github.io/gistjs') gistjs
     li
       a(href='http://watilde.github.io/grunt-require-config') grunt-require-config
