--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -7,6 +7,10 @@ block content
   ul
     li
       a(href='http://watilde.github.io/dartstack') Dartstack
+  h2 Library
+  ul
+    li
+      a(href='http://watilde.github.io/css-fliter.js') css-filter.js
   h2 npm
   ul
     li
