--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -11,6 +11,8 @@ block content
   ul
     li
       a(href='http://watilde.github.io/css-fliter.js') css-filter.js
+    li
+      a(href='http://watilde.github.io/beeplay') beeplay.js
   h2 npm
   ul
     li
