Add chest and jsss

--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -16,6 +16,10 @@ block content
   h2 npm
   ul
     li
+      a(href='http://watilde.github.io/jsss-compiler') jsss-compiler
+    li
+      a(href='http://chestjs.com') chest
+    li
       a(href='http://watilde.github.io/rpull') rpull
     li
       a(href='http://watilde.github.io/gistjs') gistjs
