--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,7 +11,7 @@ $codeFont: Monaco, Consolas, monospace;
 $postFont: 'Merriweather', serif;
 $headerFont: 'Open Sans', sans-serif;
 
-$mainTheme: $blue;
+$mainTheme: $purple;
 $baseTextColor: $offBlack;
 $lightTextColor: $grey;
 
