--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -3,6 +3,12 @@ block head
   title About Me
 block content
   h1 About Me
+  p Software Engeneer, Designer
+  ul
+    li
+      a(href='https://osrc.dfm.io/watilde/') THE OPEN SOURCE REPORT CARD
+    li
+      a(href='http://resume.github.io/?watilde') MY GITHUB RÉSUMÉ
   h2 English
   ul
     li
