--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -6,6 +6,8 @@ block content
   h2 App
   ul
     li
+      a(href='http://watilde.github.io/first-starred-repository/') First Starred Repository
+    li
       a(href='http://watilde.github.io/dartstack') Dartstack
   h2 Library
   ul
@@ -15,6 +17,12 @@ block content
       a(href='http://watilde.github.io/beeplay') beeplay.js
   h2 npm
   ul
+    li
+      a(href='http://watilde.github.io/wdu') wdu
+    li
+      a(href='http://watilde.github.io/jsss-contextual') jsss-contextual
+    li
+      a(href='http://watilde.github.io/gulp-jsss') gulp-jsss
     li
       a(href='http://watilde.github.io/jsss-compiler') jsss-compiler
     li
