--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -15,6 +15,8 @@ block content
       a(href='http://watilde.github.io/css-fliter.js') css-filter.js
     li
       a(href='http://watilde.github.io/beeplay') beeplay.js
+    li
+      a(href='http://watilde.github.io/abeck') abeck.js
   h2 npm
   ul
     li
