Add linkdin link and my name

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -3,6 +3,7 @@ block head
   title About Me
 block content
   h1 About Me
+  h2 Daijiro Wachi
   p Software Engeneer, Designer
   ul
     li
@@ -15,6 +16,8 @@ block content
       a(href='https://github.com/watilde/') GitHub
     li
       a(href='https://npmjs.org/~watilde') npm
+    li
+      a(href='http://linkedin.com/pub/daijiro-wachi/') Linkedin
   h2 Japanese
   ul
     li
