Add my book link and tweaks text

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -10,7 +10,7 @@ block content
       a(href='https://osrc.dfm.io/watilde/') THE OPEN SOURCE REPORT CARD
     li
       a(href='http://resume.github.io/?watilde') MY GITHUB RÉSUMÉ
-  h2 English
+  h3 English Infomation
   ul
     li
       a(href='https://github.com/watilde/') GitHub
@@ -18,7 +18,7 @@ block content
       a(href='https://npmjs.org/~watilde') npm
     li
       a(href='http://linkedin.com/pub/daijiro-wachi/') Linkedin
-  h2 Japanese
+  h3 Japanese Infomation
   ul
     li
       a(href='https://twitter.com/watilde/') Twitter
@@ -26,3 +26,7 @@ block content
       a(href='http://qiita.com/watilde') Qiita
     li
       a(href='http://jsdo.it/watilde/') jsdo.it
+  h3 My books
+  ul
+    li
+      a(href='http://www.amazon.co.jp/gp/product/4774167975?adid=0RKFWNGSCNG17A3D2RDE&camp=1027&creative=7407&creativeASIN=4774167975&linkCode=as4&tag=watilde-22') JavaScriptエンジニア養成読本
