Minor tweaks to about.jade

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -4,12 +4,13 @@ block head
 block content
   h1 About Me
   h2 Daijiro Wachi
-  p Software Engeneer, Designer
+  p Software Engeneer, UI Designer, OSS Engineer
   ul
     li
       a(href='https://osrc.dfm.io/watilde/') THE OPEN SOURCE REPORT CARD
     li
       a(href='http://resume.github.io/?watilde') MY GITHUB RÉSUMÉ
+  hr
   h3 English Infomation
   ul
     li
@@ -18,6 +19,7 @@ block content
       a(href='https://npmjs.org/~watilde') npm
     li
       a(href='http://linkedin.com/pub/daijiro-wachi/') Linkedin
+  hr
   h3 Japanese Infomation
   ul
     li
