Add hatena blog link

--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -28,6 +28,8 @@ block content
       a(href='http://qiita.com/watilde') Qiita
     li
       a(href='http://jsdo.it/watilde/') jsdo.it
+    li
+      a(href='http://watilde.hatenablog.com') Blog
   h3 My books
   ul
     li
