--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -4,7 +4,7 @@ block head
 block content
   h1 About Me
   h2 Daijiro Wachi
-  p Software Engeneer, UI Designer, OSS Engineer
+  p Software engineer, UI designer, OSS engineer
   ul
     li
       a(href='https://osrc.dfm.io/watilde/') THE OPEN SOURCE REPORT CARD
