--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -20,6 +20,8 @@ block content
   h2 npm
   ul
     li
+      a(href='http://watilde.github.io/qrip') qrip
+    li
       a(href='http://watilde.github.io/wdu') wdu
     li
       a(href='http://watilde.github.io/jsss-contextual') jsss-contextual
