--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -9,6 +9,10 @@ block content
       a(href='http://watilde.github.io/first-starred-repository/') First Starred Repository
     li
       a(href='http://watilde.github.io/dartstack') Dartstack
+  h2 Conpe
+  ul
+    li
+      a(href='http://js1k.com/2014-dragons/details/1812') JS1k 2014-dragon
   h2 Library
   ul
     li
