--- a/src/pages/about.jade
+++ b/src/pages/about.jade
@@ -34,3 +34,7 @@ block content
   ul
     li
       a(href='http://www.amazon.co.jp/gp/product/4774167975?adid=0RKFWNGSCNG17A3D2RDE&camp=1027&creative=7407&creativeASIN=4774167975&linkCode=as4&tag=watilde-22') JavaScriptエンジニア養成読本
+  h3 My articles
+  ul
+    li
+      a(href='http://labs.gree.jp/blog/2014/12/12311/') rejs – Vanilla JS Module Builderの紹介
