--- a/src/pages/projects.jade
+++ b/src/pages/projects.jade
@@ -13,6 +13,8 @@ block content
   ul
     li
       a(href='http://js1k.com/2014-dragons/details/1812') JS1k 2014-dragon
+    li
+      a(href='http://watilde.github.io/FirstStockedArticleInQiita') First Stocked Article In Qiita
   h2 Library
   ul
     li
