--- a/themes/landscape/layout/_partial/header.ejs
+++ b/themes/landscape/layout/_partial/header.ejs
@@ -3,11 +3,11 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="<%- url_for() %>" id="logo"><%= config.title %></a>
+        <p id="logo"><%= config.title %></p>
       </h1>
       <% if (theme.subtitle){ %>
         <h2 id="subtitle-wrap">
-          <a href="<%- url_for() %>" id="subtitle"><%= theme.subtitle %></a>
+          <p id="subtitle"><%= theme.subtitle %></p>
         </h2>
       <% } %>
     </div>
