--- a/themes/landscape/source/css/_partial/footer.styl
+++ b/themes/landscape/source/css/_partial/footer.styl
@@ -1,6 +1,8 @@
 #footer
+  text-align: center
+  height: 50px
+  line-height: 50px
   background: color-footer-background
-  padding: 50px 0
   border-top: 1px solid color-border
   color: color-grey
   a
@@ -10,5 +12,4 @@
       text-decoration: underline
 
 #footer-info
-  line-height: line-height
   font-size: 0.85em
